# SuperTopAgencyBot

./: .gitignore  DEPLOY.md  Dockerfile  README.md  client_secret.json  dataForGoogle.json  docker-compose.yml  pyproject.toml  telegram_bot.log.bak
supertop_bot/: __main__.py  config.py  db.py  db.sql  scratch.py  templates.py
supertop_bot/handlers/: __init__.py  __init__.py.bak  cold_clients_mailing.py  conversations.py  create_cold_mailing.py  error_message_recognition.py  get_data_of_model_for_searching_portfolio.py  get_offer_for_models.py  get_offer_for_models.py.bak  get_phone_number.py  keyboards.py  menu_for_managers.py  order_a_model.py  response.py  scheduled_handlers.py  send_photo_by_model.py  start.py
supertop_bot/services/: googlesheetapi.py  scheduled_mailing.py  telethon_mailing.py  useful_functions.py
supertop_bot/templates/: access_denied.j2  aletr_new_jo.j2  checking_jo.j2  choose_action.j2  choose_manager_for_accepting_jo.j2  error_message_recognition.j2  go_to_mailing_of_jo.j2  input_id_model.j2  input_id_models_for_cold_mailing.j2  input_id_models_for_scheduled_mailing.j2  input_phone_model.j2  main_menu.j2  mess_for_mng_when_model_accept_jo.j2  mess_for_model_when_she_accept_jo.j2  new_order.j2  parametr_for_searching_portfolio.j2  permission_denied.j2  start_auth.j2  start_notauth.j2  start_notauth_retry.j2  success_order.j2  successful_request_сontact_manager.j2  user_added_to_db.j2  wait.j2
